Make minimum width of tabs dynamic on iOS.

When in compact mode, reduce the maximum width of tabs in the tab strip.
Associated bug contains screenshot of what the new tabs look like.

BUG=694508

Review-Url: https://codereview.chromium.org/2706983002
Cr-Commit-Position: refs/heads/master@{#451760}